fixing the cursor alignment

--- a/public/style.css
+++ b/public/style.css
@@ -15,17 +15,15 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: rgb(101, 161, 139);
+    background-color: rgb(180, 176, 120);
 }
 
 #chalkboard {
-    position: static;
-    width: 100%;
-    height: 100%;
+    position: abscolute;
     top: 20px;
     left: 0px;
-    margin: 0;
-    background-color: rgb(101, 161, 139);
+    margin: 10px;
+    background-color: cadetblue;
 }
 
 #menu {
@@ -80,16 +78,16 @@ body {
     background-color: #4cdbc4;
 }
 
-.color.white {
-    color: white;
+.color.black {
+    color: black;
 }
 
 .color.red {
     color: red;
 }
 
-.color.green {
-    color: rgb(101, 161, 139);
+.color.white {
+    color: white;
 }
 
 .color.blue {
@@ -100,7 +98,7 @@ body {
     color: gold;
 }
 
-.color.black {
+.color.cadetblue {
     color: black;
 }
 
